[package]
name = "hello"
version = "0.1.0"
authors = ["Nicolas Sauzede <nsauzede@laposte.net>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gate = { path = "../gate" }

[build-dependencies]
gate_build = { path = "../gate_build" }
